src/skiacapi/cpp/skiacapi.h

CAPI unsigned char SkBlendMode_Exclusion(void);
CAPI unsigned char SkBlendMode_Multiply(void);
CAPI unsigned char SkBlendMode_Hue(void);
CAPI unsigned char SkBlendMode_Saturation(void);
CAPI unsigned char SkBlendMode_Color(void);
CAPI unsigned char SkBlendMode_Luminosity(void);
CAPI unsigned char SkGradientShaderInterpolationColorSpace_Destination(void);
CAPI unsigned char SkGradientShaderInterpolationColorSpace_OKLab(void);