src/main/java/com/loadingbyte/cinecred/natives/skiacapi/skiacapi_h.java


    /**
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Exclusion()
     * }
     */
    public static byte SkBlendMode_Exclusion() {
        var mh$ = SkBlendMode_Exclusion.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkBlendMode_Exclusion");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkBlendMode_Multiply {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkBlendMode_Multiply");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Multiply()
     * }
     */
    public static FunctionDescriptor SkBlendMode_Multiply$descriptor() {
        return SkBlendMode_Multiply.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Multiply()
     * }
     */
    public static MethodHandle SkBlendMode_Multiply$handle() {
        return SkBlendMode_Multiply.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Multiply()
     * }
     */
    public static MemorySegment SkBlendMode_Multiply$address() {
        return SkBlendMode_Multiply.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Multiply()
     * }
     */
    public static byte SkBlendMode_Multiply() {
        var mh$ = SkBlendMode_Multiply.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkBlendMode_Multiply");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkBlendMode_Hue {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkBlendMode_Hue");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Hue()
     * }
     */
    public static FunctionDescriptor SkBlendMode_Hue$descriptor() {
        return SkBlendMode_Hue.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Hue()
     * }
     */
    public static MethodHandle SkBlendMode_Hue$handle() {
        return SkBlendMode_Hue.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Hue()
     * }
     */
    public static MemorySegment SkBlendMode_Hue$address() {
        return SkBlendMode_Hue.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Hue()
     * }
     */
    public static byte SkBlendMode_Hue() {
        var mh$ = SkBlendMode_Hue.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkBlendMode_Hue");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkBlendMode_Saturation {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkBlendMode_Saturation");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Saturation()
     * }
     */
    public static FunctionDescriptor SkBlendMode_Saturation$descriptor() {
        return SkBlendMode_Saturation.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Saturation()
     * }
     */
    public static MethodHandle SkBlendMode_Saturation$handle() {
        return SkBlendMode_Saturation.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Saturation()
     * }
     */
    public static MemorySegment SkBlendMode_Saturation$address() {
        return SkBlendMode_Saturation.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Saturation()
     * }
     */
    public static byte SkBlendMode_Saturation() {
        var mh$ = SkBlendMode_Saturation.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkBlendMode_Saturation");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkBlendMode_Color {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkBlendMode_Color");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Color()
     * }
     */
    public static FunctionDescriptor SkBlendMode_Color$descriptor() {
        return SkBlendMode_Color.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Color()
     * }
     */
    public static MethodHandle SkBlendMode_Color$handle() {
        return SkBlendMode_Color.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Color()
     * }
     */
    public static MemorySegment SkBlendMode_Color$address() {
        return SkBlendMode_Color.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Color()
     * }
     */
    public static byte SkBlendMode_Color() {
        var mh$ = SkBlendMode_Color.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkBlendMode_Color");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkBlendMode_Luminosity {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkBlendMode_Luminosity");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Luminosity()
     * }
     */
    public static FunctionDescriptor SkBlendMode_Luminosity$descriptor() {
        return SkBlendMode_Luminosity.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Luminosity()
     * }
     */
    public static MethodHandle SkBlendMode_Luminosity$handle() {
        return SkBlendMode_Luminosity.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Luminosity()
     * }
     */
    public static MemorySegment SkBlendMode_Luminosity$address() {
        return SkBlendMode_Luminosity.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Luminosity()
     * }
     */
    public static byte SkBlendMode_Luminosity() {
        var mh$ = SkBlendMode_Luminosity.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkBlendMode_Luminosity");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkGradientShaderInterpolationColorSpace_Destination {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkGradientShaderInterpolationColorSpace_Destination");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkGradientShaderInterpolationColorSpace_Destination()
     * }
     */
    public static FunctionDescriptor SkGradientShaderInterpolationColorSpace_Destination$descriptor() {
        return SkGradientShaderInterpolationColorSpace_Destination.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkGradientShaderInterpolationColorSpace_Destination()
     * }
     */
    public static MethodHandle SkGradientShaderInterpolationColorSpace_Destination$handle() {
        return SkGradientShaderInterpolationColorSpace_Destination.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkGradientShaderInterpolationColorSpace_Destination()
     * }
     */
    public static MemorySegment SkGradientShaderInterpolationColorSpace_Destination$address() {
        return SkGradientShaderInterpolationColorSpace_Destination.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkGradientShaderInterpolationColorSpace_Destination()
     * }
     */
    public static byte SkGradientShaderInterpolationColorSpace_Destination() {
        var mh$ = SkGradientShaderInterpolationColorSpace_Destination.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkGradientShaderInterpolationColorSpace_Destination");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkGradientShaderInterpolationColorSpace_OKLab {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkGradientShaderInterpolationColorSpace_OKLab");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkGradientShaderInterpolationColorSpace_OKLab()
     * }
     */
    public static FunctionDescriptor SkGradientShaderInterpolationColorSpace_OKLab$descriptor() {
        return SkGradientShaderInterpolationColorSpace_OKLab.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkGradientShaderInterpolationColorSpace_OKLab()
     * }
     */
    public static MethodHandle SkGradientShaderInterpolationColorSpace_OKLab$handle() {
        return SkGradientShaderInterpolationColorSpace_OKLab.HANDLE;
    }
